--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>quotation</title>
+
+    <meta name="description" content="">
+
     <link rel="stylesheet" href="styles/style.css">
 
+    <script src="node_modules/modernizr/modernizr.js"></script>
     <script src="vendors/jquery-3.2.1.min.js"></script>
     <script src="scripts/main.js"></script>
+    <!--[if lt IE 8]><!-->
+    <link rel="stylesheet" href="ie7/quotaticons-ie7.css">
+    <!--<![endif]-->
 </head>
 <body>
 
+    <header class="container-fluid">
+        <h1>
+            quotation.
+            <img src="images/logo_quotation.svg" alt="quotation. (logo)">
+        </h1>
+    </header>
+
+    <main class="container-fluid">
+        <div class="row values">
+            <div class="col-xs-4 col-md-2 from">
+                <div class="input-group">
+                    <label for="from">US$</label>
+                    <input type="text" id="from" value="381,53">
+                    <button>
+                        <img src="images/flags/united-states-of-america.svg" alt="United States of America (flag)">
+                        <span>usd</span>
+                    </button>
+                    <div class="currencies active">
+                        <section>
+                            <abbr>brl</abbr>
+                            <p>Brazilian Real</p>
+                        </section>
+                        <section class="selected">
+                            <abbr>usd</abbr>
+                            <p>US Dollar</p>
+                        </section>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4 last-md change">
+                <button class="btn-change">exchange values</button>
+            </div>
+            <div class="col-xs-4 col-md-2 to">
+                <div class="input-group">
+                    <label for="to">R$</label>
+                    <input type="text" id="to" value="1234,56">
+                    <button>
+                        <img src="images/flags/brazil.svg" alt="Brazil (flag)">
+                        <span>brl</span>
+                    </button>
+                    <div class="currencies active">
+                        <section class="selected">
+                            <abbr>brl</abbr>
+                            <p>Brazilian Real</p>
+                        </section>
+                        <section>
+                            <abbr>usd</abbr>
+                            <p>US Dollar</p>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4 info">
+                <p>updated on October 27 at 5:59 pm</p>
+            </div>
+        </div>
+    </main>
+
+    <footer></footer>
+
+
+    <script src="scripts/quotaticons-liga.js"></script>
 </body>
 </html>
