[*] home page updated

--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,18 @@
     <script src="node_modules/modernizr/modernizr.js"></script>
     <script src="vendors/jquery-3.2.1.min.js"></script>
     <script src="scripts/main.js"></script>
+
     <!--[if lt IE 8]><!-->
     <link rel="stylesheet" href="ie7/quotaticons-ie7.css">
     <!--<![endif]-->
 </head>
 <body>
 
-    <header class="container-fluid">
-        <h1>
-            quotation.
-            <img src="images/logo_quotation.svg" alt="quotation. (logo)">
-        </h1>
+    <header>
+        <h1>quotation</h1>
     </header>
 
-    <main class="container-fluid">
+    <main class="container-fluid wrapper">
         <div class="row values">
             <div class="col-xs-4 col-md-2 from">
                 <div class="input-group">
@@ -70,15 +68,25 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-4 info">
+            <div class="col-xs-4 last-xs info">
                 <p>updated on October 27 at 5:59 pm</p>
             </div>
         </div>
     </main>
 
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="#">about</a>
+            </li>
+            <li>
+                <a href="#">privacy</a>
+            </li>
+            <li>
+                <a href="#">terms</a>
+            </li>
+        </ul>
+    </footer>
 
 
     <script src="scripts/quotaticons-liga.js"></script>
