[+] other pages added

--- a/src/index.html
+++ b/src/index.html
@@ -77,13 +77,13 @@
     <footer>
         <ul>
             <li>
-                <a href="#">about</a>
+                <a href="about.html">about</a>
             </li>
             <li>
-                <a href="#">privacy</a>
+                <a href="privacy.html">privacy</a>
             </li>
             <li>
-                <a href="#">terms</a>
+                <a href="terms.html">terms</a>
             </li>
         </ul>
     </footer>
