[*] pages updated and favicons added

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>quotation</title>
+    <title>quotation.</title>
 
-    <meta name="description" content="">
+    <meta name="description" content="currency quotation. simple.">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="194x194" href="/images/favicons/favicon-194x194.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/images/favicons/manifest.json">
+    <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#00c752">
+    <link rel="shortcut icon" href="/images/favicons/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="quotation.">
+    <meta name="application-name" content="quotation.">
+    <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#00c752">
 
     <link rel="stylesheet" href="styles/style.css">
 
@@ -19,7 +32,7 @@
 </head>
 <body class="page">
 
-<header class="container-fluid">
+<header>
     <h1>
         <a href="index.html">quotation</a>
     </h1>
@@ -28,13 +41,22 @@
 <main class="container-fluid wrapper">
     <div class="row">
         <div class="col-xs-4 col-sm-3 last-sm">
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
-            <p>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</p>
-            <p>Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
+            <h1>privacy policy.</h1>
 
-            <h3>Lorem Ipsum</h3>
-            <p>Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu.</p>
+            <p>By accessing our Service you authorize us to use cookies in accordance with this Privacy Policy. If you do not agree that we use cookies in this manner, you must adjust your browser settings to not allow its use or access the page of this Service. Disabling the cookies we use may impact your experience.</p>
+
+            <h3>what are cookies?</h3>
+            <p>Cookies are files or information that can be stored on your computer (or other device connected to the Internet, such as smartphones or tablets) when you visit a site. A cookie usually contains the name of the site that originated it, the cookie's "lifetime" (that is, how long it will remain on your device), and a value, which is usually a randomly generated unique number.</p>
+
+            <h3>what kind of cookies do we use?</h3>
+            <p>Two types of cookies may be used in our Service – "session cookies" and "persistent cookies". Session cookies are temporary cookies that will remain on your device until you leave the page. A persistent cookie remains on your device until it is deleted (the time the cookie will remain on your device will depend on the lifetime of the particular cookie and your browser settings).</p>
+            <p>Some of the pages you visit may also collect information using pixel tags (also called clear gifs) that can be shared by third parties that directly support our promotional activities and website development. However, the information does not identify individuals, although they may be correlated to your personal information.</p>
+
+            <h1>disclaimer.</h1>
+
+            <p><strong>We do not guarantee the accuracy of the exchange rates used in this Service.</strong> You should always confirm the current rates before making transactions that may be affected by possible changes in the values. The values given herein are for informational purposes only and are subject to change without notice. Rates for actual transactions may vary and this Service does not offer to enter into any transaction of any displayed rate.</p>
+
+            <span>Last modified: November 5, 2017</span>
         </div>
         <nav class="col-xs-4 col-sm-1">
             <ul>
