--- a/src/terms.html
+++ b/src/terms.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>quotation</title>
+    <title>quotation.</title>
 
-    <meta name="description" content="">
+    <meta name="description" content="currency quotation. simple.">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="194x194" href="/images/favicons/favicon-194x194.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/images/favicons/manifest.json">
+    <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#00c752">
+    <link rel="shortcut icon" href="/images/favicons/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="quotation.">
+    <meta name="application-name" content="quotation.">
+    <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#00c752">
 
     <link rel="stylesheet" href="styles/style.css">
 
@@ -19,7 +32,7 @@
 </head>
 <body class="page">
 
-<header class="container-fluid">
+<header>
     <h1>
         <a href="index.html">quotation</a>
     </h1>
@@ -28,13 +41,22 @@
 <main class="container-fluid wrapper">
     <div class="row">
         <div class="col-xs-4 col-sm-3 last-sm">
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
-            <p>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</p>
-            <p>Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
+            <h1>terms of use.</h1>
+            <p>By using our Service, you are agreeing to these terms. Please read them carefully.</p>
 
-            <h3>Lorem Ipsum</h3>
-            <p>Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu.</p>
+            <h3>using our service.</h3>
+            <p>You must follow any policies made available to you within the Service.</p>
+            <p>Don’t misuse our Service. For example, don’t interfere with our Service or try to access them using a method other than the interface and the instructions that we provide. You may use our Service only as permitted by law, including applicable export and re-export control laws and regulations. We may suspend or stop providing our Service to you if you do not comply with our terms or policies or if we are investigating suspected misconduct.</p>
+            <p>Using our Service does not give you ownership of any intellectual property rights in our Service or the content you access. You may not use content from our Service unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Service. Don’t remove, obscure, or alter any legal notices displayed in or along with our Service.</p>
+            <p>Our Service display some content that is not Quotation’s. This content is the sole responsibility of the entity that makes it available. We may review content to determine whether it is illegal or violates our policies, and we may remove or refuse to display content that we reasonably believe violates our policies or the law. But that does not necessarily mean that we review content, so please don’t assume that we do.</p>
+            <p>In connection with your use of the Service, we may send you service announcements, administrative messages, and other information. You may opt out of some of those communications.</p>
+            <p>Some of our Service are available on mobile devices. Do not use such Service in a way that distracts you and prevents you from obeying traffic or safety laws.</p>
+
+            <h3>exchange update.</h3>
+            <p>The values presented in this Service are informative and updated several times every hour, but there will be no change in value during the weekends.</p>
+            <p>We will always provide the date and time of the last update of the exchange rate that you are viewing. This way you will be sure that the value is as updated as possible.</p>
+
+            <span>Last modified: November 5, 2017</span>
         </div>
         <nav class="col-xs-4 col-sm-1">
             <ul>
