[*] About updated with the list of currencies for the first version

--- a/src/about.html
+++ b/src/about.html
@@ -44,7 +44,7 @@
             <h1>currency quotation. simple.</h1>
             <p>The <strong>quotation.</strong> has emerged as a simple and practical solution for currency conversion in the world.</p>
             <p>This project was created by <a href="https://feliperego.com/" target="_blank">Felipe Rêgo</a> and <a href="https://janklever.com.br/" target="_blank">Jan Klever</a> from Brazil.</p>
-            <p>Today we counted on the conversion between 12 currencies.</p>
+            <p>Today we counted on the conversion between 24 currencies.</p>
 
             <section class="row">
                 <div class="col-xs-4 col-sm-2">
@@ -52,19 +52,31 @@
                         <li>Argentine Peso</li>
                         <li>Australian Dollar</li>
                         <li>Brazilian Real</li>
+                        <li>British Pound Sterling</li>
                         <li>Canadian Dollar</li>
                         <li>Chilean Peso</li>
                         <li>Colombian Peso</li>
+                        <li>Euro</li>
+                        <li>Hong Kong Dollar</li>
+                        <li>Indian Rupee</li>
+                        <li>Japanese Yen</li>
+                        <li>Mexican Peso</li>
                     </ul>
                 </div>
                 <div class="col-xs-4 col-sm-2">
                     <ul>
-                        <li>Euro</li>
-                        <li>British Pound Sterling</li>
-                        <li>Japanese Yen</li>
                         <li>New Zealand Dollar</li>
-                        <li>US Dollar</li>
+                        <li>Norwegian Krone</li>
+                        <li>Renminbi</li>
+                        <li>Russian Ruble</li>
+                        <li>Singapore Dollar</li>
+                        <li>South African Rand</li>
+                        <li>South Korean Won</li>
+                        <li>Swedish Krona</li>
+                        <li>Swiss Franc</li>
+                        <li>Turkish Lira</li>
                         <li>Uruguayan Peso</li>
+                        <li>US Dollar</li>
                     </ul>
                 </div>
             </section>
