[+] choose a currency created

--- a/src/index.html
+++ b/src/index.html
@@ -46,16 +46,6 @@
                         <img src="images/flags/united-states-of-america.svg" alt="United States of America (flag)">
                         <span>usd</span>
                     </button>
-                    <div class="currencies active">
-                        <section>
-                            <abbr>brl</abbr>
-                            <p>Brazilian Real</p>
-                        </section>
-                        <section class="selected">
-                            <abbr>usd</abbr>
-                            <p>US Dollar</p>
-                        </section>
-                    </div>
                 </div>
             </div>
             <div class="col-xs-4 last-md change">
@@ -69,16 +59,6 @@
                         <img src="images/flags/brazil.svg" alt="Brazil (flag)">
                         <span>brl</span>
                     </button>
-                    <div class="currencies active">
-                        <section class="selected">
-                            <abbr>brl</abbr>
-                            <p>Brazilian Real</p>
-                        </section>
-                        <section>
-                            <abbr>usd</abbr>
-                            <p>US Dollar</p>
-                        </section>
-                    </div>
                 </div>
             </div>
             <div class="col-xs-4 last-xs info">
@@ -86,6 +66,200 @@
             </div>
         </div>
     </main>
+
+    <section class="currencies active">
+        <div class="container-fluid">
+            <div class="row currencies-header">
+                <div class="col-xs-4">
+                    <h3>
+                        from <span>usd</span> to <span class="empty">brl</span>
+                    </h3>
+                    <button class="currencies-close">
+                        <i class="ic-">close</i>
+                    </button>
+                </div>
+            </div>
+
+            <div class="row middle-sm currencies-list">
+
+                <div class="col-xs-4">
+                    <div class="row">
+
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/japan.svg" alt="Japan (flag)">
+                                <abbr>jpy</abbr>
+                                <span>Argentine Peso</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/australia.svg" alt="Australia (flag)">
+                                <abbr>aud</abbr>
+                                <span>Australian Dollar</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/brazil.svg" alt="Brazil (flag)">
+                                <abbr>brl</abbr>
+                                <span>Brazilian Real</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/united-kingdom.svg" alt="United Kindom (flag)">
+                                <abbr>gbp</abbr>
+                                <span>British Pound Sterling</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/canada.svg" alt="Canada (flag)">
+                                <abbr>cad</abbr>
+                                <span>Canadian Dollar</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/chile.svg" alt="Chile (flag)">
+                                <abbr>clp</abbr>
+                                <span>Chilean Peso</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/china.svg" alt="China (flag)">
+                                <abbr>cny</abbr>
+                                <span>Chinese Yuan</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/colombia.svg" alt="Colombia (flag)">
+                                <abbr>cop</abbr>
+                                <span>Colombian Peso</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/european-union.svg" alt="European Union (flag)">
+                                <abbr>eur</abbr>
+                                <span>Euro</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/hong-kong.svg" alt="Hong Kong (flag)">
+                                <abbr>hkd</abbr>
+                                <span>Hong Kong Dollar</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/india.svg" alt="India (flag)">
+                                <abbr>inr</abbr>
+                                <span>Indian Rupee</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/japan.svg" alt="Japan (flag)">
+                                <abbr>jpy</abbr>
+                                <span>Japanese Yen</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/mexico.svg" alt="Mexico (flag)">
+                                <abbr>mxn</abbr>
+                                <span>Mexican Peso</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/new-zealand.svg" alt="New Zealand (flag)">
+                                <abbr>nzd</abbr>
+                                <span>New Zealand Dollar</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/norway.svg" alt="Norway (flag)">
+                                <abbr>nok</abbr>
+                                <span>Norwegian Krone</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/russia.svg" alt="Russia (flag)">
+                                <abbr>rub</abbr>
+                                <span>Russian Ruble</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/singapore.svg" alt="Singapore (flag)">
+                                <abbr>sgd</abbr>
+                                <span>Singapore Dollar</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/south-africa.svg" alt="South Africa (flag)">
+                                <abbr>zar</abbr>
+                                <span>South African Rand</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/south-korea.svg" alt="South Korea (flag)">
+                                <abbr>krw</abbr>
+                                <span>South Korean Won</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/sweden.svg" alt="Sweden (flag)">
+                                <abbr>sek</abbr>
+                                <span>Swedish Krona</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/switzerland.svg" alt="Switzerland (flag)">
+                                <abbr>chf</abbr>
+                                <span>Swiss Franc</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/turkey.svg" alt="Turkey (flag)">
+                                <abbr>try</abbr>
+                                <span>Turkish Lira</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/uruguay.svg" alt="Uruguay (flag)">
+                                <abbr>uyu</abbr>
+                                <span>Uruguayan Peso</span>
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-sm-2">
+                            <button class="currencies-coin">
+                                <img src="images/flags/united-states-of-america.svg" alt="United States of America (flag)">
+                                <abbr>usd</abbr>
+                                <span>US Dollar</span>
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <footer>
         <ul>
