Added the "noindex" meta tag on index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- REMOVE THIS IN PRODUCTION -->
+    <meta name="robots" content="noindex">
+    <!-- REMOVE THIS IN PRODUCTION -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <meta name="description" content="currency quotation. simple.">
 
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/favicons/apple-touch-icon.png">
